# My_Clock

./: .cproject  .project  sdkconfig
esp-idf/components/esp_eth/src/: esp_eth_phy_ip101.c
main/: CMakeLists.txt  component.mk  main.c
main/HTTPS_OTA/: https_ota.c  https_ota.h
main/WIFI_Smart/: smartconfig.c  smartconfig.h
server_certs/: ca_cert.pem  ca_key.pem
